# lotteries

./: .gitignore  CONTRIBUTING.md  CURRENT_STATUS.md  Edreams  FINAL_SUMMARY.md  FIXES_SUMMARY.md  LICENSE  Makefile  README.md  euromillions  euromillions_2016_2025.csv  euromillions_values.txt  get_draws.py  grok.py  lotteries.code-workspace  lottery_values.txt  pyproject.toml  requirements.txt  run_all.py  setup.py  start_eurodreams.bat  start_euromillions.bat  start_totoloto.bat  totoloto
.github/workflows/: ci.yml
data/: euromillions.txt  prizes.json  prizes_range.json
eurodreams/: Edreams.py  __init__.py  eurodreams_get_draws.py  readme.md
euromillions/: README.md  __init__.py  archive_source.py  arithmetic_branch.py  branch_hmm_v3.py  branch_hmm_v4.py  branch_shortlist_benchmark.py  diagnostics3.py  euromillions.r  euromillions_2016_2025.csv  garch_glm_diagnostics.py  garch_return_benchmark.py  garchx.py  garchx_alternative_volatility.py  garchx_glm.py  garchx_residuals.py  get_draws.py  grok.py  guess.py  infer.py  lottology.py  model_compare.py  project.toml  roi.py  schema.py  split_backtest.py
euromillions_agent/: README.md  fetch_prizes.py  fetch_prizes_range.py  grokky.py  lotto_lab.py  phase2_sobol.py
examples/: README.md  euromillions_hello_world.ipynb
labs/: README.md
lotteries.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lotto_lab_out/: agent_metrics.json
scripts/: curate_garch_outputs.py  predict_next_draw.py
tests/: README.md  conftest.py  test_arithmetic_branch.py  test_end_to_end_paths.py  test_garchx_residuals.py  test_get_draws_failure.py  test_get_draws_normalize.py  test_get_draws_sources.py  test_guess.py  test_infer.py  test_run_all.py  test_schema.py
totoloto/: README.md  __init__.py  grok.py  lottery_values.txt  totoloto_get_draws.py
(+64 files in other folders)
