[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotteries"
version = "0.1.0"
description = "Lottery data fetch + analysis (EuroMillions / Totoloto / EuroDreams)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "kugguk2022" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "numpy>=1.25",
  "python-dateutil>=2.8.2",
  "pandera>=0.20",
  "pyarrow>=15.0",
  "scikit-learn>=1.3.0",
  "statsmodels>=0.14.0",
  "torch>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "scipy>=1.10.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/kugguk2022/lotteries"
Issues = "https://github.com/kugguk2022/lotteries/issues"
Discussions = "https://github.com/kugguk2022/lotteries/discussions"

[project.scripts]
lotto-get-draws = "euromillions.get_draws:main"
# Enable later when implemented:
# lotto-roi = "euromillions.roi:main"

[tool.setuptools.packages.find]
include = ["euromillions", "totoloto", "eurodreams", "euromillions_agent"]

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = false
ignore_missing_imports = true
